# incplot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md  gitignore.txt  index.html
.github/workflows/: brew_test.yml  build.yml  notes.md  publish.yml
cmake.config/: versionUpdate.cmake
cmake.packaging/: CMakeLists.txt
cmake/config/: configScript.cmake  platform_folder.hpp.in  versiondef.hpp.in
cmake/config/auto/: versiondef.h
cmake/incom/: StageOutputs.cmake
cmake/packaging/: CMakeLists.txt
data/: configDB.seed.sqlite  configDB.sqlite
html_output/: BarHM.html  BarHS.html  BarVM.html  multiline.html  scatter.html
include/: args.hpp  config.hpp  cross_platform.hpp  err.hpp  fontmaker.hpp  sqlitedefs.hpp  uri.h
include/incplot/: args.hpp  config.hpp  err.hpp  sqlitedefs.hpp
src/: args.cpp  config.cpp  cross_platform.cpp  fontmaker.cpp  main.cpp  uri.cpp
